--- a/ui_translater.ui
+++ b/ui_translater.ui
@@ -34,7 +34,7 @@
    <item row="0" column="0">
     <widget class="QLineEdit" name="filterEdit">
      <property name="text">
-      <string>Filter</string>
+      <string/>
      </property>
     </widget>
    </item>
@@ -47,20 +47,6 @@
        </property>
       </widget>
      </item>
-     <item>
-      <widget class="QCheckBox" name="dirtyBox">
-       <property name="text">
-        <string>&amp;dirty</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="removeButton">
-       <property name="text">
-        <string>&amp;Remove</string>
-       </property>
-      </widget>
-     </item>
     </layout>
    </item>
    <item row="8" column="0">
@@ -70,6 +56,9 @@
        <horstretch>0</horstretch>
        <verstretch>1</verstretch>
       </sizepolicy>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
@@ -106,12 +95,15 @@
     </layout>
    </item>
    <item row="10" column="0" colspan="2">
-    <widget class="QPlainTextEdit" name="plainTextEdit">
+    <widget class="QPlainTextEdit" name="commentEdit">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
        <horstretch>0</horstretch>
        <verstretch>1</verstretch>
       </sizepolicy>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
