--- a/ui_translater.ui
+++ b/ui_translater.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>TranslateDialog</class>
- <widget class="QDialog" name="TranslateDialog">
+ <class>TranslateWidget</class>
+ <widget class="QWidget" name="TranslateWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -33,6 +33,9 @@
    </item>
    <item row="0" column="0">
     <widget class="QLineEdit" name="filterEdit">
+     <property name="focusPolicy">
+      <enum>Qt::ClickFocus</enum>
+     </property>
      <property name="text">
       <string/>
      </property>
@@ -57,6 +60,9 @@
        <verstretch>1</verstretch>
       </sizepolicy>
      </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
@@ -80,6 +86,9 @@
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QCheckBox" name="untransOnlyBox">
+       <property name="focusPolicy">
+        <enum>Qt::NoFocus</enum>
+       </property>
        <property name="text">
         <string>show &amp;untranslated only</string>
        </property>
@@ -87,6 +96,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="saveButton">
+       <property name="focusPolicy">
+        <enum>Qt::NoFocus</enum>
+       </property>
        <property name="text">
         <string>&amp;Save (CTRL+S)</string>
        </property>
@@ -101,6 +113,9 @@
        <horstretch>0</horstretch>
        <verstretch>1</verstretch>
       </sizepolicy>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
      </property>
      <property name="readOnly">
       <bool>true</bool>
