On startup top right item of table is selected.

--- a/ui_mainwindow.ui
+++ b/ui_mainwindow.ui
@@ -253,6 +253,10 @@
    </property>
   </action>
  </widget>
+ <tabstops>
+  <tabstop>tableView</tabstop>
+  <tabstop>transEdit</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
