--- a/ui_options.ui
+++ b/ui_options.ui
@@ -35,7 +35,7 @@
       <item row="0" column="0">
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>Base translation:</string>
+         <string>Original file:</string>
         </property>
        </widget>
       </item>
